# cloudflare-zstd-example

./: Cargo.toml  diagram.excalidraw
.github/: .env
.github/workflows/: deploy.yml  test.yml
common/: Cargo.toml
common/src/: lib.rs
compression-task/: Cargo.toml  wrangler.toml
compression-task/src/: lib.rs
server/: Cargo.toml  wrangler.toml
server/src/: lib.rs
server/tests/: input.txt  test.rs
