[package]
name = "compression-task"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-compression = { version = "0.3", features = ["stream", "zstd"] }
bytes = "0.5"
console_error_panic_hook = "0.1"
futures-util = "0.3"
worker = { workspace = true }

common = { path = "../common" }
